Fix z-index of the form

--- a/src/components/RsvpForm.scss
+++ b/src/components/RsvpForm.scss
@@ -16,6 +16,7 @@ body {
   bottom: 0;
   margin-left: -60vw;
   max-height: 80vh;
+  z-index: 9999;
 
   display: flex;
   flex-grow: 1;
